fix: conflict issues, body overflow-x

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,6 +33,7 @@ body {
     background-color: var(--bg-black);
     color: whitesmoke;
     font-family: 'Advent Pro', sans-serif;
+    overflow-x: hidden;
 }
 
 ul {
